--- a/frontend/microfrontend/authentication/package.json
+++ b/frontend/microfrontend/authentication/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@svgr/webpack": "^8.1.0"
   }
 }
