--- a/frontend/microfrontend/profile-microfrontend/package.json
+++ b/frontend/microfrontend/profile-microfrontend/package.json
@@ -10,20 +10,14 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.57.1",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.3.1",
-    "dotenv-webpack": "^8.0.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "test:microfrontend": "npx jest ./index.spec.js",
-    "eject": "react-scripts eject",
-    "start_host": "webpack serve --mode development",
-    "start_host:live": "webpack serve --mode development --live-reload --hot"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
